k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: docker.io/zealswan/db_mysql:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
        readinessProbe:
          exec:
            command:
              - mysqladmin
              - ping
              - -S
              - /var/lib/mysql/mysql.sock
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
